politics-search/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polsearch-api
  namespace: praveen
  labels:
    app.kubernetes.io/name: polsearch-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: polsearch-api
